--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -17,6 +17,8 @@
 @use "components/card";
 @use "components/icons";
 @use "components/forms";
+@use "components/navigation";
+@use "components/logos";
 
 /**
  * 3. Layout
