--- a/src/style/components/_elevation.scss
+++ b/src/style/components/_elevation.scss
@@ -1,7 +1,7 @@
-@use "../base/mixins";
+@use "../base/variables";
 
 @for $i from 1 through 5 {
     .elevated-#{$i} {
-        box-shadow: 0 2px #{$i * 2 + 3}px 0px hsla(hue(mixins.color('gray', 500)), saturation(mixins.color('gray', 500)), lightness(mixins.color('gray', 500)), 0.2);
+        box-shadow: 0 2px #{$i * 2 + 3}px 0px hsla(hue(variables.color('gray', 'default')), saturation(variables.color('gray', 'default')), lightness(variables.color('gray', 'default')), 0.2);
     }
 }
