--- a/src/style/base/_mixins.scss
+++ b/src/style/base/_mixins.scss
@@ -1,5 +1,5 @@
-@use "colors";
+@use "variables";
 
-@function color($color, $variant: 500) {
-    @return map-get(map-get(colors.$colors, $color), $variant);
+@function color($color, $variant: 'default') {
+    @return map-get(map-get(variables.$colors, $color), $variant);
 }
