--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,4 +1,5 @@
 @use "mixins";
+@use "variables";
 
 /* inter-100 - latin */
 @font-face {
@@ -97,7 +98,7 @@
 
 h1 {
     font-size: 2rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
     font-weight: normal;
     margin: 0;
 }
@@ -105,38 +106,39 @@ h1 {
 h2 {
     font-size: 1.8rem;
     margin: 0 0 1rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
 }
 
 h3 {
     font-size: 1.6rem;
     margin: 0 0 1rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
 }
 
 h4 {
     font-size: 1.4rem;
     margin: 0 0 1rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
+    font-weight: normal;
 }
 
 h5 {
     font-size: 1.2rem;
     margin: 0 0 1rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
     font-weight: 600;
 }
 
 h6 {
     font-size: 1.1rem;
     margin: 0 0 1rem;
-    color: mixins.color('gray', 900);
+    color: variables.$base-font-color;
 }
 
 .text-danger {
-    color: mixins.color('red', 700);
+    color: variables.color('red', 'default');
 }
 
 .text-secondary {
-    color: mixins.color('gray', 600);
+    color: variables.color('gray', 'default');
 }
