--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -40,6 +40,10 @@
                 background: var(--vertical-navigation-hover-item-background-color);
             }
 
+            &:active {
+                background: var(--vertical-navigation-active-item-background-color);
+            }
+
             .vertical-navigation-list-item-icon {
                 margin-right: var(--base-gutter);
                 font: {
@@ -51,21 +55,33 @@
                 color: #fff;
                 background: var(--primary-color);
                 border-radius: var(--base-border-radius);
-
-                //&:before {
-                //    content: '';
-                //    position: absolute;
-                //    height: 100%;
-                //    width: 3px;
-                //    background: var(--primary-color);
-                //    border-radius: 0 var(--base-border-radius) var(--base-border-radius) 0;
-                //    left: 0;
-                //    top: 0;
-                //}
             }
 
             &:not(:last-child) {
                 margin-bottom: var(--base-gutter);
+            }
+        }
+    }
+
+    &.is-collapsed {
+        min-width: auto;
+
+        .vertical-navigation-list-item {
+            position: relative;
+            .vertical-navigation-list-item-icon {
+                margin-right: 0;
+            }
+
+            .vertical-navigation-list-item-text {
+                display: none;
+            }
+
+            &:hover {
+                white-space: nowrap;
+
+                .vertical-navigation-list-item-text {
+                    display: block;
+                }
             }
         }
     }
