--- a/src/style/components/_tooltips.scss
+++ b/src/style/components/_tooltips.scss
@@ -52,7 +52,7 @@
                 }
 
                 > .arrow {
-                    top: 0;
+                    top: -8px;
                     height: 8px;
                     width: 16px;
 
@@ -96,7 +96,7 @@
                 }
 
                 > .arrow {
-                    right: -8px;
+                    right: 0;
                     border-bottom: solid 8px transparent;
                     border-left: solid 8px rgba(0, 0, 0, .7);
                     border-top: solid 8px transparent;
