Made overlay css generic

--- a/src/style/components/_tooltips.scss
+++ b/src/style/components/_tooltips.scss
@@ -1,8 +1,4 @@
 .tooltip {
-    > .overlay-animator {
-        position: relative;
-    }
-
     > .overlay-animator, & {
         > .content {
             background: rgba(0, 0, 0, .7);
@@ -10,35 +6,15 @@
             padding: calc(var(--base-gutter) / 2);
             border-radius: var(--base-border-radius);
         }
-
-        > .arrow {
-            position: absolute;
-            z-index: -1;
-
-            &:before {
-                content: '';
-                position: absolute;
-            }
-        }
     }
 
     &[data-popper-placement^="top"] {
         &.has-arrow {
             > .overlay-animator, & {
-                > .content {
-                    margin-bottom: 8px;
-                }
-
-                > .arrow {
-                    bottom: -8px;
-                    height: 8px;
-                    width: 16px;
-
-                    &:before {
-                        border-top: solid 8px rgba(0, 0, 0, .7);
-                        border-left: solid 8px transparent;
-                        border-right: solid 8px transparent;
-                    }
+                > .arrow:before {
+                    border-top: solid 8px rgba(0, 0, 0, .7);
+                    border-left: solid 8px transparent;
+                    border-right: solid 8px transparent;
                 }
             }
         }
@@ -47,20 +23,10 @@
     &[data-popper-placement^="bottom"] {
         &.has-arrow {
             > .overlay-animator, & {
-                > .content {
-                    margin-top: 8px;
-                }
-
-                > .arrow {
-                    top: -8px;
-                    height: 8px;
-                    width: 16px;
-
-                    &:before {
-                        border-bottom: solid 8px rgba(0, 0, 0, .7);
-                        border-left: solid 8px transparent;
-                        border-right: solid 8px transparent;
-                    }
+                > .arrow:before {
+                    border-bottom: solid 8px rgba(0, 0, 0, .7);
+                    border-left: solid 8px transparent;
+                    border-right: solid 8px transparent;
                 }
             }
         }
@@ -72,17 +38,10 @@
                 > .content {
                     margin-left: 8px;
                 }
-
-                > .arrow {
-                    left: 0;
-                    height: 16px;
-                    width: 8px;
-
-                    &:before {
-                        border-right: solid 8px rgba(0, 0, 0, .7);
-                        border-top: solid 8px transparent;
-                        border-bottom: solid 8px transparent;
-                    }
+                > .arrow:before {
+                    border-right: solid 8px rgba(0, 0, 0, .7);
+                    border-top: solid 8px transparent;
+                    border-bottom: solid 8px transparent;
                 }
             }
         }
@@ -95,7 +54,7 @@
                     margin-right: 8px;
                 }
 
-                > .arrow {
+                > .arrow:before {
                     right: 0;
                     border-bottom: solid 8px transparent;
                     border-left: solid 8px rgba(0, 0, 0, .7);
