--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,6 +15,7 @@
 @use "components/icons";
 @use "components/forms";
 @use "components/tags";
+@use "components/overlay";
 @use "components/tooltips";
 
 /**
