--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,6 +15,8 @@
 @use "components/icons";
 @use "components/forms";
 @use "components/tags";
+@use "components/overlay";
+@use "components/tooltips";
 
 /**
  * 3. Layout
