--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -6,10 +6,10 @@
     font-style: normal;
     font-weight: 500;
     src: local(''),
-    url('../fonts/icons/cui-icons.eot') format('eot'),
-    url('../fonts/icons/cui-icons.svg') format('svg'),
-    url('../fonts/icons/cui-icons.ttf') format('ttf'),
-    url('../fonts/icons/cui-icons.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url('#{variables.$iconPath}/cui-icons.eot') format('eot'),
+    url('#{variables.$iconPath}/cui-icons.svg') format('svg'),
+    url('#{variables.$iconPath}/cui-icons.ttf') format('ttf'),
+    url('#{variables.$iconPath}/cui-icons.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 h1 {
